Notes for ARM64 systems, updated the readme